Fixed icon alignment
CSS: added alignment on line 291

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -284,9 +284,11 @@ textarea {
     font-weight: 600;
 }
 
+/* fixed icon alignment ------------------------------------- ADD ME! */
 .mapIcon {
     color: var(--primary-color);
     font-size: 20px;
+    vertical-align: text-bottom;
 }
 
 .locationsHR {
